# swarm_of_drons

./: .clang-format  .clangd  .gitignore  Dockerfile  README.md  a.out  edges.csv  missions.csv  pyproject.toml
.cache/clangd/index/: graph.cpp.6711BC042B339128.idx  graph.hpp.1D81FA02B764AC07.idx  main.cpp.CB39F19E9FCD0513.idx  main.cpp.E51E777AF9EBEC2A.idx  time_table.cpp.59A05D02C4503DA2.idx  time_table.hpp.856265D12D9F00EC.idx
.devcontainer/: devcontainer.json
.github/instructions/: copilot.instructions.md  cpp.instructions.md
.github/workflows/: build_test.yml  devel.yml  format.yml  main.yml  test.yml  testing.yml  unit_test.yml  workflow.yml
map/: 173700.csv  368700.csv  map.html  map.py
map/.devcontainer/: devcontainer.json
missions/: test_missions.json
src/clock_simulation/: CMakeLists.txt  package.xml
src/clock_simulation/src/: sim_clock.cpp  sim_clock_publisher.cpp
src/clock_simulation_interfaces/: CMakeLists.txt  package.xml
src/clock_simulation_interfaces/srv/: TimeScale.srv
src/data_utils/: CMakeLists.txt  package.xml
src/dron_interfaces/: CMakeLists.txt  package.xml
src/drone_composition/: CMakeLists.txt  package.xml
src/drone_composition/include/: drone_controller.hpp
src/drone_composition/include/drone_composition/: drone.hpp  drone_controller.hpp
src/drone_composition/src/: drone.cpp  drone_controller.cpp
src/drone_composition/test/: test_drone_composition.cpp
src/drone_controller/: CMakeLists.txt  package.xml
src/drone_controller/image/: swarm_data_drons.csv
src/drone_controller/include/: config.hpp  drone.hpp  drone_controller.hpp
src/drone_controller/src/: drone.cpp  drone_controller.cpp  main.cpp
src/drone_interfaces/: CMakeLists.txt  package.xml
src/drone_interfaces/msg/: GlobalMission.msg  Mission.msg  Report.msg
src/drones_visualization/: CMakeLists.txt  package.xml
src/drones_visualization/include/: drone_visual.hpp  drone_visual_controller.hpp
src/drones_visualization/src/: drone_visual.cpp  drone_visual_controller.cpp  main.cpp
src/generate_graph/: generate_limit_zone.py
src/generate_graph/image/: 368700.csv  limit.csv
src/generate_missions/: generate.py  missions.csv  probability4.csv
src/launch_module/: package.xml  setup.cfg  setup.py
src/launch_module/config/: config.rviz
src/launch_module/launch/: drone_composition.launch.py  drone_controller.launch.py  drone_visual_controller.launch.py  map_visual.launch.py  mission_publisher.launch.py  navigator.launch.py  navigator2.launch.py  run.launch.py  rviz.launch.py  simulation_clock.launch.py
src/map_visual/: CMakeLists.txt  package.xml
src/map_visual/include/: marker_publisher.hpp
src/map_visual/src/: main.cpp  marker_publisher.cpp
src/mission_publisher/: CMakeLists.txt  package.xml
src/mission_publisher/include/: mission_publisher.hpp
src/mission_publisher/src/: main.cpp  mission_publisher.cpp
src/navigator/: CMakeLists.txt  package.xml
src/navigator/include/: graph.hpp  interface.hpp  time_table.hpp
src/navigator/src/: graph.cpp  interface.cpp  main.cpp  time_table.cpp
src/navigator2/: CMakeLists.txt  package.xml
src/navigator2/include/navigator2/: config.hpp  drone.hpp  map.hpp  mission_manager.hpp  navigator.hpp  vertex.hpp
src/navigator2/src/: main.cpp  map.cpp  mission_manager.cpp  navigator.cpp
src/navigator2/test/: test1.cpp  test_config_load.cpp  test_end_to_end.cpp  test_execute_mission.py  test_integration.py  test_integration2.py  test_map.cpp  test_relocate_execute_mission.py
src/navigator_interfaces/: CMakeLists.txt  package.xml
src/navigator_interfaces/srv/: FreeDrone.srv
src/rviz_panel_tutorial/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/rviz_panel_tutorial/include/rviz_panel_tutorial/: demo_panel.hpp
src/rviz_panel_tutorial/src/: demo_panel.cpp
src/tmp/: CMakeLists.txt  package.xml
src/tmp/src/: main.cpp
test/test1/: test_missions.json
test/test2/: drones.csv  map.csv  missions.json
tests/test1/: drones.csv  edges.csv  missions.json
tests/test2/: graph.csv  missions.csv  missions.json
tests/test3/: edges.csv  missions.csv  missions.json
tests/test4/: drones.csv  missions.json
tests/test5/: edges.csv  graph.csv  missions.csv
tests/test6/: drones.csv  edges.csv  graph.csv  missions.csv
tests/test7/: edges.csv  graph.csv  missions.csv
tmp/: Dockerfile  tmp.txt
