<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clock_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shlyapin2005@gmail.com">root</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>clock_simulation_interfaces</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
