<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigator2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shlyapin2005@gmail.com">root</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>data_utils</depend>
  <depend>navigator_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>drone_interfaces</depend>
  

  <build_depend>eigen</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
