<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_log_panel</name>
  <version>0.1.0</version>
  <description>RViz Log Panel</description>
  <maintainer email="shlyapin2005@gmail.com">isshlyapin</maintainer>
  <license>MIT</license>

  <depend>pluginlib</depend>
  <depend>rviz_common</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
